tests/baselines/reference/parserMemberAccessorDeclaration18.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration18.ts (1 errors) ====
    class C {
       set Foo(...a) { }
               ~~~~
!!! parserMemberAccessorDeclaration18.ts(2,12): error TS1053: 'set' accessor cannot have rest parameter.
    }